2025-XX Feature Update for Version Next (5.0.x)

--- a/index.html
+++ b/index.html
@@ -46,45 +46,24 @@
     </div>
 
 
-    <header class="header-area">
+    <header>
+        <a href="./index.html"><img src="./img/core-img/logo.png" alt="logo" class="logo" /></a>
 
-        <div class="main-header-area">
-            <div class="classy-nav-container breakpoint-off">
-                <div class="container container-xxl">
+        <input type="checkbox" id="check" />
+        <label for="check" class="icons">
+            <i class="fa-solid fa-bars" id="menu-icon"></i>
+            <i class="fa-solid fa-xmark" id="close-icon"></i>
+        </label>
 
-                    <nav class="classy-navbar justify-content-between" id="pwNav">
-
-                        <a class="nav-brand img-logo" href="./index.html"><img class="logo-img"
-                                src="./img/core-img/logo.png" alt></a>
-
-                        <div class="classy-navbar-toggler">
-                            <span class="navbarToggler"><span></span><span></span><span></span></span>
-                        </div>
-
-                        <div class="classy-menu">
-
-                            <div class="classycloseIcon">
-                                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
-                            </div>
-
-                            <div class="classynav">
-                                <ul id="nav">
-                                    <li class="active"><a href="./index.html">Home</a></li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./works-by-nrfz.html">Works By NRFZ</a></li>
-                                    <li><a href="./eicw.html">EICW</a></li>
-                                    <li><a href="./blog.html">Blog</a></li>
-                                    <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-                                            title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button>
-                                    </li>
-                                </ul>
-                            </div>
-
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </div>
+        <nav class="navbar navbar-mobile">
+            <a href="./index.html" class="nav-item active">Home</a>
+            <a href="./about.html" class="nav-item">About</a>
+            <a href="./works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
+            <a href="./eicw.html" class="nav-item">EICW</a>
+            <a href="./blog.html" class="nav-item">Blog</a>
+            <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
+                    title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+        </nav>
     </header>
 
 
