--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -52,29 +52,15 @@
     </label>
 
     <nav class="navbar navbar-mobile">
-      <a href="#" class="nav-item" style="--i: 0">Home</a>
-      <a href="./about.html" class="nav-item" style="--i: 1">About</a>
-      <a href="./works-by-nrfz.html" class="nav-item active" style="--i: 2">Works By NRFZ</a>
-      <a href="./eicw.html" class="nav-item" style="--i: 3">EICW</a>
-      <a href="./blog.html" class="nav-item" style="--i: 3">Blog</a>
-      <a href="#" class="nav-item" style="--i: 3"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
+      <a href="./index.html" class="nav-item">Home</a>
+      <a href="./about.html" class="nav-item">About</a>
+      <a href="./works-by-nrfz.html" class="nav-item active">Works By NRFZ</a>
+      <a href="./eicw.html" class="nav-item">EICW</a>
+      <a href="./blog.html" class="nav-item">Blog</a>
+      <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
         title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
     </nav>
   </header>
-
-
-  <!-- <ul id="nav">
-    <li class="active"><a href="./index.html">Home</a></li>
-    <li><a href="./about.html">About</a></li>
-    <li><a href="./works-by-nrfz.html">Works By NRFZ</a></li>
-    <li><a href="./eicw.html">EICW</a></li>
-    <li><a href="./blog.html">Blog</a></li>
-    <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-            title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button>
-    </li>
-</ul> -->
-
-
 
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
@@ -103,12 +89,11 @@
         <div class="portfolio-controls">
           <!-- Filter Buttons -->
           <div class="portfolio-filter">
-            <button class="btn active" data-filter="*">All Projects</button>
-            <button class="btn" data-filter=".wd">Designs</button>
-            <button class="btn" data-filter=".cr">Mockups</button>
-            <button class="btn" data-filter=".id">Infographics</button>
-            <button class="btn" data-filter=".md">Mockup Designs</button>
-            <button class="btn" data-filter=".ld">Logos</button>
+            <button class="btn btn-filter active" data-filter="*">All Projects</button>
+            <button class="btn btn-filter" data-filter=".wd">Designs</button>
+            <button class="btn btn-filter" data-filter=".cr">Mockups</button>
+            <button class="btn btn-filter" data-filter=".id">Infographics</button>
+            <button class="btn btn-filter" data-filter=".ld">Logos</button>
           </div>
 
           <!-- Sort Dropdown -->
