--- a/about.html
+++ b/about.html
@@ -41,68 +41,74 @@
     </div>
 
 
-    <header class="header-area">
+    <header>
+        <a href="./index.html"><img src="./img/core-img/logo.png" alt="logo" class="logo" /></a>
 
-        <div class="main-header-area">
-            <div class="classy-nav-container breakpoint-off">
-                <div class="container container-xxl">
+        <input type="checkbox" id="check" />
+        <label for="check" class="icons">
+            <i class="fa-solid fa-bars" id="menu-icon"></i>
+            <i class="fa-solid fa-xmark" id="close-icon"></i>
+        </label>
 
-                    <nav class="classy-navbar justify-content-between" id="pwNav">
-
-                        <a class="nav-brand img-logo" href="./index.html"><img src="./img/core-img/logo.png" alt></a>
-
-                        <div class="classy-navbar-toggler">
-                            <span class="navbarToggler"><span></span><span></span><span></span></span>
-                        </div>
-
-                        <div class="classy-menu">
-
-                            <div class="classycloseIcon">
-                                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
-                            </div>
-
-                            <div class="classynav">
-                                <ul id="nav">
-                                    <li><a href="./index.html">Home</a></li>
-                                    <li class="active"><a href="./about.html">About</a></li>
-                                    <li><a href="./works-by-nrfz.html">Works By NRFZ</a></li>
-                                    <li><a href="./blog.html">Blog</a></li>
-                                    <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-                                            title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button>
-                                    </li>
-                                </ul>
-                            </div>
-
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </div>
+        <nav class="navbar navbar-mobile">
+            <a href="./index.html" class="nav-item">Home</a>
+            <a href="./about.html" class="nav-item active">About</a>
+            <a href="./works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
+            <a href="./eicw.html" class="nav-item">EICW</a>
+            <a href="./blog.html" class="nav-item">Blog</a>
+            <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
+                    title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+        </nav>
     </header>
 
-
-    <section class="breadcrumb-area-subp bg-img bg-overlay" id="cv-about"
-        style="background-image: url(img/bg-img/hero-bg-small.png);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="breadcrumb-content text-center">
+    <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
+        style="background-image: url(img/bg-img/hero-bg-small.png); height: 100vh;">
+        <div class="wbnrfz_details">
+            <div class="container">
+                <div class="col-lg-12">
+                    <div class="main-title">
                         <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html"> Home</a>
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
                                 </li>
-                                <li class="breadcrumb-item active" aria-current="page">About</li>
+                                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
+                                        About
+                                    </a>
+                                </li>
                             </ol>
                         </nav>
-                        <h2 class="page-title">About Me</h2>
+                        <h1>About Me</h1>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="container">
+                <div class="portfolio-controls">
+                    <!-- Filter Buttons -->
+                    <div class="portfolio-filter">
+                        <a href="#summary">
+                            <button class="btn">Summary</button>
+                        </a>
+                        <a href="#tm">
+                            <button class="btn">Timelines & Milestones</button>
+                        </a>
+                        <a href="#lppl">
+                            <button class="btn">Language Proficiency</button>
+                        </a>
+                        <a href="#lppl">
+                        <button class="btn">Programming Languages</button>
+                        </a>
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
 
     <!-- Summary -->
-    <section class="about-me-summ section-padding-80-0 clearfix">
+    <section class="about-me-summ section-padding-80-0 clearfix" id="summary">
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12 sect-title">
@@ -167,7 +173,7 @@
     </section>
 
     <!-- Timelines -->
-    <section class="about-me-area bg-gray section-padding-80-0 clearfix">
+    <section class="about-me-area bg-gray section-padding-80-0 clearfix" id="tm">
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
@@ -332,7 +338,7 @@
     </section>
 
 
-    <section class="follow-area clearfix">
+    <section class="follow-area clearfix" id="lppl">
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
