2025-XX Feature Update for Version Next (5.0.x)

--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -64,7 +64,7 @@
 
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
-    style="background-image: url(img/bg-img/hero-bg-small.png); height: 100vh;">
+    style="background-image: url(img/bg-img/hero-bg-small.png); height: 80vh;">
     <div class="wbnrfz_details">
       <div class="container">
         <div class="col-lg-12">
@@ -113,10 +113,18 @@
 
 
 
-  <section class="about-me-summ section-padding-80-0 clearfix">
+  <section class="about-me-summ clearfix">
 
     <div class="pw-portfolio-area section-padding-80 clearfix">
       <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+              <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                  <h2 id="filter-title">All Projects</h2>
+              </div>
+          </div>
+      </div>
+
         <div class="row pw-portfolio">
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
             <div class="single-portfolio-content">
