--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -64,7 +64,7 @@
 
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
-    style="background-image: url(img/bg-img/hero-bg-small.png); height: 80vh;">
+    style="background-image: url(img/bg-img/hero-bg-small.png); height: 100vh;">
     <div class="wbnrfz_details">
       <div class="container">
         <div class="col-lg-12">
@@ -126,7 +126,7 @@
       </div>
 
         <div class="row pw-portfolio">
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2025">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/EiaJAoM.png" alt>
               <div class="hover-content">
@@ -138,7 +138,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2024">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/5I39ojc.png" alt="tdc-v2">
               <div class="hover-content">
@@ -150,7 +150,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ii mb-30 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ii mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/YgEWKR0.png" alt="store-invent">
               <div class="hover-content">
@@ -162,7 +162,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms" data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/r0gIlFD.png" alt="bp12-nws">
               <div class="hover-content">
@@ -174,7 +174,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms" data-year="2024">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/0CvilmH.png" alt="bus-pids">
               <div class="hover-content">
@@ -210,7 +210,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="300ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="300ms" data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/2ZDDWFy.png" alt="myts-app">
               <div class="hover-content">
@@ -223,7 +223,7 @@
           </div>
 
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms" data-year="2022">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/wDvqKp1.png" alt="bus-rep">
               <div class="hover-content">
@@ -235,7 +235,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video id mb-30 wow fadeInUp" data-wow-delay="700ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video id mb-30 wow fadeInUp" data-wow-delay="700ms" data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/kstN8gT.png" alt="time-tree">
               <div class="hover-content">
@@ -247,7 +247,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms" data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/7e69TyC.png" alt="more-rep">
               <div class="hover-content">
@@ -259,7 +259,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms" data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/9ynFmuE.png" alt="mrt-sign-s1">
               <div class="hover-content">
@@ -271,7 +271,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms" data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/FRqxXUy.png" alt="mrt-sign-s2">
               <div class="hover-content">
@@ -283,7 +283,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2022">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/4DBfqCK.png" alt="hydration-reg">
               <div class="hover-content">
@@ -295,7 +295,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/fepgW5P.png" alt="hydration-reg">
               <div class="hover-content">
@@ -307,7 +307,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2020">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/5uss3c8.png" alt="hydration-reg">
               <div class="hover-content">
@@ -319,7 +319,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ld mb-30 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ld mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2017">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/3dYLGoP.png" alt="hydration-reg">
               <div class="hover-content">
@@ -331,7 +331,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2020">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/b29Wusf.png" alt="hydration-reg">
               <div class="hover-content">
@@ -343,7 +343,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2021">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/ZGhtKD7.png" alt="hydration-reg">
               <div class="hover-content">
