--- a/index.html
+++ b/index.html
@@ -313,37 +313,6 @@
             </div>
         </div>
 
-        <!-- <div class="instragram-feed-area owl-carousel wow fadeInUp" data-wow-delay="300ms">
-
-            <div class="single-software-item">
-                <img src="img/gallery/brand1.png" alt="inkscape">
-            </div>
-
-            <div class="single-software-item">
-                <img src="img/gallery/brand2.png" alt="sketchup">
-            </div>
-
-            <div class="single-software-item">
-                <img src="img/gallery/brand3.png" alt="illustrator">
-            </div>
-
-            <div class="single-software-item">
-                <img src="img/gallery/brand4.png" alt="xd">
-            </div>
-
-            <div class="single-software-item">
-                <img src="img/gallery/brand5.png" alt="office-365">
-            </div>
-
-            <div class="single-software-item">
-                <img src="img/gallery/brand6.png" alt="windows">
-            </div>
-        </div> -->
-
-
-
-
-
         <div class="row">
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
                 <a href="./about.html" class="btn pw-btn btn-2 mt-15">About Me &nbsp;<i
@@ -352,35 +321,28 @@
         </div>
     </section>
 
-
-
     <footer class="footer-area">
-        <div class="container container-xxl">
-            <div class="row">
-                <div class="col-12">
-                    <div class="footer-content d-flex align-items-center justify-content-between">
-
-                        <div class="copywrite-text">
-                            <p>
-                                &copy;
-                                <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
-                            </p>
-                        </div>
-
-                        <div class="social-info">
-                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
-                                    aria-hidden="true"></i></a>
-                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter"
-                                    aria-hidden="true"></i></a>
-                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
-                                    aria-hidden="true"></i></a>
-                            <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram"
-                                    aria-hidden="true"></i></a>
-                        </div>
-                    </div>
+        <div class="container">
+            <div class="footer-content d-flex flex-column align-items-center text-center">
+                <!-- Social Links -->
+                <div class="social-info mb-3">
+                    <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
+                            aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
+                            aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram"
+                            aria-hidden="true"></i></a>
+                </div>
+                <!-- Copywrite Text -->
+                <div class="copywrite-text">
+                    <p>&copy;
+                        <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
+                    </p>
                 </div>
             </div>
         </div>
+    </footer>
 
         <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
             data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
