--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -58,7 +58,7 @@
       <a href="./eicw.html" class="nav-item">EICW</a>
       <a href="./blog.html" class="nav-item">Blog</a>
       <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-        title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+          title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
     </nav>
   </header>
 
@@ -119,14 +119,15 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-              <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                  <h2 id="filter-title">All Projects</h2>
-              </div>
+            <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+              <h2 id="filter-title">All Projects</h2>
+            </div>
           </div>
-      </div>
+        </div>
 
         <div class="row pw-portfolio">
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2025">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms"
+            data-year="2025">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/EiaJAoM.png" alt>
               <div class="hover-content">
@@ -138,7 +139,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2024">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="100ms"
+            data-year="2024">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/5I39ojc.png" alt="tdc-v2">
               <div class="hover-content">
@@ -150,7 +152,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ii mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2023">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ii mb-30 wow fadeInUp" data-wow-delay="100ms"
+            data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/YgEWKR0.png" alt="store-invent">
               <div class="hover-content">
@@ -162,7 +165,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms" data-year="2023">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms"
+            data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/r0gIlFD.png" alt="bp12-nws">
               <div class="hover-content">
@@ -174,7 +178,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms" data-year="2024">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms"
+            data-year="2024">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/0CvilmH.png" alt="bus-pids">
               <div class="hover-content">
@@ -210,7 +215,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="300ms" data-year="2023">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="300ms"
+            data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/2ZDDWFy.png" alt="myts-app">
               <div class="hover-content">
@@ -223,7 +229,8 @@
           </div>
 
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms" data-year="2022">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms"
+            data-year="2022">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/wDvqKp1.png" alt="bus-rep">
               <div class="hover-content">
@@ -235,7 +242,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video id mb-30 wow fadeInUp" data-wow-delay="700ms" data-year="2023">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video id mb-30 wow fadeInUp" data-wow-delay="700ms"
+            data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/kstN8gT.png" alt="time-tree">
               <div class="hover-content">
@@ -247,7 +255,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms" data-year="2023">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms"
+            data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/7e69TyC.png" alt="more-rep">
               <div class="hover-content">
@@ -259,7 +268,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms" data-year="2023">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms"
+            data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/9ynFmuE.png" alt="mrt-sign-s1">
               <div class="hover-content">
@@ -271,7 +281,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms" data-year="2023">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms"
+            data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/FRqxXUy.png" alt="mrt-sign-s2">
               <div class="hover-content">
@@ -283,7 +294,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2022">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms"
+            data-year="2022">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/4DBfqCK.png" alt="hydration-reg">
               <div class="hover-content">
@@ -295,7 +307,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2023">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms"
+            data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/fepgW5P.png" alt="hydration-reg">
               <div class="hover-content">
@@ -307,7 +320,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2020">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="100ms"
+            data-year="2020">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/5uss3c8.png" alt="hydration-reg">
               <div class="hover-content">
@@ -319,7 +333,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ld mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2017">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ld mb-30 wow fadeInUp" data-wow-delay="100ms"
+            data-year="2017">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/3dYLGoP.png" alt="hydration-reg">
               <div class="hover-content">
@@ -331,7 +346,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2020">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms"
+            data-year="2020">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/b29Wusf.png" alt="hydration-reg">
               <div class="hover-content">
@@ -343,7 +359,8 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms" data-year="2021">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms"
+            data-year="2021">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/ZGhtKD7.png" alt="hydration-reg">
               <div class="hover-content">
@@ -360,28 +377,21 @@
 
   </section>
 
-
-
   <footer class="footer-area">
     <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="footer-content d-flex align-items-center justify-content-between">
-
-            <div class="copywrite-text">
-              <p>
-                &copy;
-                <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
-              </p>
-            </div>
-
-            <div class="social-info">
-              <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-              <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-              <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-              <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
-            </div>
-          </div>
+      <div class="footer-content d-flex flex-column align-items-center text-center">
+        <!-- Social Links -->
+        <div class="social-info mb-3">
+          <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+        </div>
+        <!-- Copywrite Text -->
+        <div class="copywrite-text">
+          <p>&copy;
+            <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
+          </p>
         </div>
       </div>
     </div>
