--- a/eicw.html
+++ b/eicw.html
@@ -887,7 +887,7 @@
         <div class="container">
             <div class="footer-content d-flex flex-column align-items-center text-center">
                 <!-- Social Links -->
-                <div class="social-info mb-3">
+                <div class="social-info">
                     <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
                             aria-hidden="true"></i></a>
                     <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
