2025-XX Feature Update for Version Next (5.0.x)

--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -129,12 +129,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2025">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/EiaJAoM.png" alt>
-              <div class="hover-content">
+              <img src="https://i.imgur.com/rBAx6Yy.png" alt>
+              <div class="hover-content-blog">
                 <h4>EICW - Implementation Brainstorming</h4>
-                <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/EiaJAoM.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -142,12 +140,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2024">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/5I39ojc.png" alt="tdc-v2">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/iRDMx37.png" alt="tdc-v3">
+              <div class="hover-content-blog">
                 <h4>Train Delays Checker V3</h4>
-                <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/5I39ojc.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -155,12 +151,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ii mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2023">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/YgEWKR0.png" alt="store-invent">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/ZZqsqxc.png" alt="store-invent">
+              <div class="hover-content-blog">
                 <h4>Store Inventory Tracking</h4>
-                <a class="info" href="worksbynrfz/sit.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/YgEWKR0.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/sit.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -168,12 +162,10 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2023">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/r0gIlFD.png" alt="bp12-nws">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/TdU00ue.png" alt="bp12-nws">
+              <div class="hover-content-blog">
                 <h4>New Wayfinding System for BP12 Jelapang</h4>
-                <a class="info" href="worksbynrfz/bp12.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/r0gIlFD.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/bp12.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
