--- a/eicw.html
+++ b/eicw.html
@@ -36,8 +36,10 @@
 
 <body>
 
+    <!-- Preloader Section -->
     <div id="preloader">
         <div class="loader"></div>
+        <p id="preloader-text">Loading...</p>
     </div>
 
 
@@ -922,6 +924,8 @@
     <script src="js/pw.bundle.js"></script>
 
     <script src="js/default-assets/active.js"></script>
+
+    <script src="js/preloader.js"></script>
 
 </body>
 
