--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
 
 <body>
 
-    <div id="preloader">
-        <div class="loader"></div>
-    </div>
-
+<!-- Preloader Section -->
+<div id="preloader">
+    <div class="loader"></div>
+    <p id="preloader-text">Loading...</p>
+  </div>
 
     <header>
         <a href="./index.html"><img src="./img/core-img/logo.png" alt="logo" class="logo" /></a>
@@ -360,6 +361,8 @@
         <script src="js/pw.bundle.js"></script>
 
         <script src="js/default-assets/active.js"></script>
+
+        <script src="js/preloader.js"></script>
 
 
 </body>
