--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -24,6 +24,8 @@
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/glightbox.min.css">
 
+  <script src="js/preloader.js"></script>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
   <script>
@@ -37,9 +39,11 @@
 
 <body>
 
-  <div id="preloader">
-    <div class="loader"></div>
-  </div>
+<!-- Preloader Section -->
+<div id="preloader">
+  <div class="loader"></div>
+  <p id="preloader-text">Loading...</p>
+</div>
 
 
   <header>
@@ -90,10 +94,11 @@
           <!-- Filter Buttons -->
           <div class="portfolio-filter">
             <button class="btn btn-filter active" data-filter="*">All Projects</button>
-            <button class="btn btn-filter" data-filter=".wd">Designs</button>
-            <button class="btn btn-filter" data-filter=".cr">Mockups</button>
-            <button class="btn btn-filter" data-filter=".id">Infographics</button>
-            <button class="btn btn-filter" data-filter=".ld">Logos</button>
+            <button class="btn btn-filter" data-filter=".ds">Designs</button>
+            <button class="btn btn-filter" data-filter=".mc">Mockups</button>
+            <button class="btn btn-filter" data-filter=".ig">Infographics</button>
+            <button class="btn btn-filter" data-filter=".lg">Logos</button>
+            <button class="btn btn-filter" data-filter=".in">Innovations</button>
           </div>
 
           <!-- Sort Dropdown -->
@@ -126,7 +131,7 @@
         </div>
 
         <div class="row pw-portfolio">
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2025">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/rBAx6Yy.png" alt>
@@ -137,7 +142,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2024">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/iRDMx37.png" alt="tdc-v3">
@@ -148,7 +153,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ii mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/ZZqsqxc.png" alt="store-invent">
@@ -159,7 +164,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/TdU00ue.png" alt="bp12-nws">
@@ -170,32 +175,28 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp" data-wow-delay="500ms"
             data-year="2024">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/0CvilmH.png" alt="bus-pids">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/NyUt8Sc.png" alt="bus-pids">
+              <div class="hover-content-blog">
                 <h4>LTA Bus PIDS Redesign</h4>
-                <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/0CvilmH.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp" data-wow-delay="700ms">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/69edjaV.png" alt="bus-stop-pole">
-              <div class="hover-content">
+              <img src="https://i.imgur.com/GrXbpDs.png" alt="bus-stop-pole">
+              <div class="hover-content-blog">
                 <h4>LTA Bus Stop Pole Design Refresh</h4>
-                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
-                    class="fa-solid fa-circle-info"></i></a>
-                <a href="https://i.imgur.com/69edjaV.png" class="portfolio-img"><i class="fa-solid fa-expand"></i></a>
+                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/6oNoqnp.png" alt="man-a22-mascot">
               <div class="hover-content">
@@ -207,7 +208,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="300ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mc mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/2ZDDWFy.png" alt="myts-app">
@@ -221,7 +222,7 @@
           </div>
 
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="500ms"
             data-year="2022">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/wDvqKp1.png" alt="bus-rep">
@@ -234,7 +235,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video id mb-30 wow fadeInUp" data-wow-delay="700ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video ig mb-30 wow fadeInUp" data-wow-delay="700ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/kstN8gT.png" alt="time-tree">
@@ -247,7 +248,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/7e69TyC.png" alt="more-rep">
@@ -260,7 +261,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp" data-wow-delay="500ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/9ynFmuE.png" alt="mrt-sign-s1">
@@ -273,7 +274,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp" data-wow-delay="700ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/FRqxXUy.png" alt="mrt-sign-s2">
@@ -286,7 +287,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2022">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/4DBfqCK.png" alt="hydration-reg">
@@ -299,7 +300,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2023">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/fepgW5P.png" alt="hydration-reg">
@@ -312,7 +313,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mc mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2020">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/5uss3c8.png" alt="hydration-reg">
@@ -325,7 +326,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ld mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item lg mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2017">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/3dYLGoP.png" alt="hydration-reg">
@@ -338,7 +339,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2020">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/b29Wusf.png" alt="hydration-reg">
@@ -351,7 +352,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ig mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2021">
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/ZGhtKD7.png" alt="hydration-reg">
