2025-XX Feature Update for Version Next (5.0.x)

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <!-- Preloader Section -->
     <div id="preloader">
         <div class="loader"></div>
-        <p id="preloader-text">Loading...</p>
+        <p id="preloader-text">Just a moment...</p>
     </div>
 
     <header>
