--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Preloader Section -->
     <div id="preloader">
         <div class="loader"></div>
-        <p id="preloader-text">Loading...</p>
+        <p id="preloader-text">Just a moment...</p>
     </div>
 
     <header>
@@ -62,8 +62,11 @@
             <a href="./works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
             <a href="./eicw.html" class="nav-item">EICW</a>
             <a href="./blog.html" class="nav-item">Blog</a>
-            <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-                    title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+            <a href="#" class="nav-item">
+                <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
+                    <i class="fa-solid fa-moon" id="theme-icon"></i>
+                </button>
+            </a>
         </nav>
     </header>
 
