--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -42,7 +42,7 @@
 <!-- Preloader Section -->
 <div id="preloader">
   <div class="loader"></div>
-  <p id="preloader-text">Loading...</p>
+        <p id="preloader-text">Just a moment...</p>
 </div>
 
 
@@ -397,6 +397,7 @@
 
   <script src="js/copy-to-clipboard.js"></script>
 
+  <script src="js/preloader.js"></script>
 
 </body>
 
